# make-day-plan-fr-notion

./: day_plan.py  main.py  make_csv.py  models.py  out.csv  pyproject.toml  requirements.txt  rm_empty_sections.py  routine.py  tod_map.prq  util.py
src/todoist_auto/: refresh_day_routine.py  rm_empty_sections.py  routine.py  util.py
